# Arena

./: .gitignore  README.md  justfile  todo.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  crypto.py  csrf.py  logging.py  security.py  service_tokens.py
backend/app/db/: __init__.py  base.py  bootstrap.py  session.py
backend/app/models/: __init__.py  auth_session.py  battle.py  (+8 more)
backend/migrations/: README.md  env.py  script.py.mako
backend/scripts/: ingest_adam_arena_split.py  seed_model_registry.py
backend/tests/: README.md  conftest.py  test_admin_exports.py  test_admin_leaderboard.py  test_admin_models.py  test_admin_prompts.py  test_admin_service_accounts.py  test_admin_tasks_import.py  test_admin_tasks_route.py  test_anon_cookie.py  test_auth_routes.py  test_auth_secret_leakage.py  test_auth_session.py  test_battle_orchestrator.py  test_battle_prepopulation.py  test_battles_route.py  test_bot_admin_route_contracts.py  test_client_ip.py  test_config.py  test_crypto.py  test_csrf.py  test_db_bootstrap.py  test_db_session.py  test_ingest_adam_arena_split.py  test_json_limits.py  test_leaderboard_bt.py  test_leaderboard_refresh.py  test_leaderboard_route.py  test_llm_client.py  test_llm_queue.py  test_llm_timeouts.py  test_llm_tracing.py  test_logging.py  test_main.py  test_me_route.py  test_oidc.py  test_oidc_client.py  test_process_guard.py  test_prompting.py  test_rate_limit.py  (+12 more)
(+224 files in other folders)
