# backend/pyproject.toml
#
# Python project metadata and dependencies for the Arena backend API.
#
# Notes:
# - Managed with `uv`.
# - Common dev commands (run from `backend/`):
#   - `uv sync`
#   - `uv run uvicorn app.main:app --reload --port 8000`

[project]
name = "opensakura-arena-backend"
version = "0.0.0"
description = "OpenSakura Arena backend (FastAPI + Postgres)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "httpx>=0.27",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "cryptography>=42.0",
  "tenacity>=8.2",
  "pyjwt[crypto]>=2.8",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
markers = [
  "unit: fast tests without external services",
  "e2e: docker-backed end-to-end tests",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This backend is an application; ship the `app` package.
packages = ["app"]
